    o #645146 by dagmar: Some exposed form information not being stored after the plugin retooling.
    o #645150 by dagmar: Incorrect call to deprecated get_exposed_form_plugin() function fixed.
    o #631522 by kbahey: Enable devel timing information for all views, not just page views.
    o #324873 by dagmar: Show all paths when listing views, not just the first path.

Views 6.x-3.0-alpha1
  Bugs fixed
    o #419226 by kelvincool: Respect admin theme during views ajax operations.
    o #419270 by voxpelli: set_where_group() could fail if no previous groups.
    o #422054 by yhahn: Protect exports from impropertly indenting multiline strings.
    o #437070 by mikeryan: Base table formerly limited to 32 characters.
    o #317271 by quicksketch: ensure_my_table() limited to one relationship per table.
    o #445398 by casey: reduce_value_options() using wrong value array.
    o #451370 by skwashd: base.js had some DOS line endings.
    o #454754 by dww: Fix PGSQL related errors with comment author filtering.
    o #384286 by dww: Make it possible to expose the filter for "Node: Has new content"
    o #463634 by alienbrain: "Empty field name" incorrectly specified.
    o #463580 by ximo: AJAX summary links broken in some displays.
    o #469456 by dereine: Automatically give .info file during views bulk export.
    o #422868 by mattman: Breadcrumbs not properly substuting % replacements.
    o #440676 by dereine and Razorraser: View import form crashed on empty view input.
    o #461842 by dereine: Use gmtime() instead of format_date() to prevent localization of dates in RSS feeds.
    o #316556 by darrenoh and JirkaRybka: More 1.x upgrade fixes.
    o #382398 by elcuco: Force LTR in the views admin.
    o #461144: Fix trimming to correctly remove tags when they are trimmed in half.
    o #330956: Theme: Information only scanned information from the default theme.
    o SA-CONTRIB-2009-037: Filter checkboxes could be displayed unfiltered allowing XSS attacks.